overflowx to solve mobile issue (?)

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
 }
 
 #root {
+  overflow-x: hidden;
   margin: 0 auto;
   text-align: center;
   display: flex;
@@ -61,6 +62,9 @@
 }
 
 div:has(> .hamburgerMenuButtons) {
+  width: 95svw;
+}
+div:has(div:has(> .hamburgerMenuButtons)) {
   width: 95svw;
 }
 
